<resources>
    <string name="app_name">Elden Build</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="weight_text">Weight: %1$s</string>
    <string name="stats_text">%1$s: %2$s</string>
    <string name="effect_text">Effect : %1$s</string>
    <string name="skill_text">Skill : %1$s</string>
    <string name="affinity_text">Affinity : %1$s</string>
    <string name="delete_build_dialog_message">%1$s Build will be permanently removed.</string>
    <string name="delete_items_dialog_message">%1$s Items will be removed from the build.</string>
    <string name="delete_items_dialog_title">Delete selected Items?</string>
    <string name="delete_builds_dialog_title">Delete selected Builds?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="attack_power">Attack Power</string>
    <string name="guarded_damage">Guarded Damage Negation</string>
    <string name="attributes_scaling">Attributes Scaling</string>
    <string name="attributes_required">Attributes Required</string>
    <string name="load_armors">Load Armors</string>
    <string name="load_weapons">Load Weapons</string>
    <string name="resistance_text">Resistance</string>
    <string name="damage_negation">Damage Negation</string>
    <string name="text_requires">Required Stats</string>
    <string name="mp_cost_and_slots">Mp cost: %1$s Slots: %2$s</string>
    <string name="hp_cost_and_fp_cost">Hp cost: %1$s Fp: %2$s</string>

    <string name="intelligence_build">Intelligence build</string>
    <string name="faith_build">Faith build</string>
    <string name="arcane_build">Arcane build</string>
    <string name="strength_build">Strength build</string>
    <string name="dexterity_build">Dexterity build</string>
    <string name="add_new_build">Add new build</string>
    <string name="build_name">Build name</string>
    <string name="type_of_build">Type of build</string>
    <string name="new_build">New Build</string>
    <string name="name_and_type_of_the_build">New build</string>
    <string name="toast_text">To create a class inform the name and type</string>
    <string name="accept_text">accept</string>
    <string name="cancel_text">Cancel</string>
    <string name="placeholder_text">Brave Tarnished.\nIt seems your build it\'s empty.</string>
    <string name="weapons_text">weapons</string>
    <string name="armors_text">armors</string>
    <string name="talismans_text">Talismans</string>
    <string name="shield_text">Shield</string>
    <string name="ammo_text">Ammo</string>
    <string name="add_to_build_text">Add to Build</string>
    <string name="incantations_text">Incantations</string>
    <string name="sorceries_text">Sorceries</string>
    <string name="spirits_text">Spirits</string>
    <string name="edit_status_text">Edit Status</string>
    <string name="add_one_level_text">Add one level to %1$s</string>
    <string name="remove_one_level_text">Remove one level from %1$s</string>
    <string name="confirm_text">confirm</string>
    <string name="delete_text">Delete</string>
    <string name="delete_content_description">delete item</string>
    <string name="title_ashes_of_war">Ashes of War</string>
</resources>