<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/incantations_text" />

    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/sorceries_text" />

    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/spirits_text" />
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/title_ashes_of_war" />


</menu>
