<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/weapons_text" />

    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/armors_text" />

    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/shield_text"
         />

    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/talismans_text" />

</menu>
